--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
+    "serve": "^14.2.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
